Use sexp for the config file.

--- a/bin/consumer/event-logger.conf
+++ b/bin/consumer/event-logger.conf
@@ -1,8 +1,8 @@
-(entry-points (http 8000) (ws 8001))
+(
+  (loggers (
+    (/events/a (file /var/data/a.log))
+    (/events/b (file /var/data/b.log))
+  ))
 
-(logs
-  (/events/a (log /var/data/a.log) (add timestamp uuid))
-  (/events/b (log /var/data/b.log) (add timestamp)))
-
-(errors
-  (* /var/log/event-logger.log))
+  (http ((port 8000)))
+)
