Async open of loggers.

--- a/bin/consumer/example.conf
+++ b/bin/consumer/example.conf
@@ -1,6 +1,7 @@
 (http 8000)
 
 (loggers (
-  (/events/a (file /var/data/a.log))
-  (/events/b (file /var/data/b.log))
+  (/events/a (file /tmp/a.log))
+  (/events/b (file /tmp/b.log))
+  (/events/c stdout)
 ))
