Rename kafka topics.
To avoid warning due to possible errors with "_" and "." separators.

--- a/examples/passover/consumer.conf
+++ b/examples/passover/consumer.conf
@@ -4,6 +4,6 @@
 ))
 
 (loggers (
-  (/events/positions (kafka passover.positions.messages))
+  (/events/positions (kafka passover-positions-messages))
   (* stderr)
 ))
