Connect web-sockets and producers.

--- a/bin/consumer/example.conf
+++ b/bin/consumer/example.conf
@@ -4,7 +4,7 @@
 ))
 
 (loggers (
-  (/events/positions (kafka passover.positions.messages))
+  (/events/positions (kafka passover-positions-messages))
   (/events/a (file /tmp/a.log))
   (/events/b (file /tmp/b.log))
   (/events/c stdout)
