--- a/examples/passover/consumer.conf
+++ b/examples/passover/consumer.conf
@@ -7,3 +7,7 @@
   (/events/positions (kafka passover-positions-messages))
   (* stderr)
 ))
+
+(publishers (
+  (/rooms/visitors/count (kafka passover-rooms-visitorcounts))
+))
