--- a/datamint.opam
+++ b/datamint.opam
@@ -3,12 +3,8 @@ version: "0.1.0"
 maintainer: "Didier Wenzek <didier.wenzek@acidalie.com>"
 authors: ["Didier Wenzek <didier.wenzek@acidalie.com>"]
 license: "GPL"
-build: [
-  ["jbuilder" "build" "--only" "datamint" "--root" "." "-j" jobs "@install"]
-]
-build-test: [
-  ["jbuilder" "runtest" "-j" jobs]
-]
+build: [["jbuilder" "build" "-p" name "-j" jobs]]
+build-test: [["jbuilder" "runtest" "-j" jobs]]
 depends: [
   "conf-libev"
   "lwt"
