Moving from jbuilder to dune: step2: file updates

--- a/bin/repl/dune
+++ b/bin/repl/dune
@@ -1,13 +1,10 @@
-(jbuild_version 1)
-
 (executables
- ((names (repl))
-  (package datamint)
-  (public_names (repl))
-  (libraries (datamint))))
+ (names repl)
+ (package datamint)
+ (public_names repl)
+ (libraries datamint))
 
 (install
-  ((section bin)
-   (package datamint)
-   (files   (stdlib.sift))
-  ))
+  (section bin)
+  (package datamint)
+  (files   stdlib.sift))
