--- a/lib/generics/dune
+++ b/lib/generics/dune
@@ -1,6 +1,4 @@
-(jbuild_version 1)
-
 (library
- ((name Generics)
-  (public_name datamint.generics)
-  (libraries (datamint.series yojson))))
+ (name Generics)
+ (public_name datamint.generics)
+ (libraries datamint.series yojson))
