--- a/lib/mapping/dune
+++ b/lib/mapping/dune
@@ -1,6 +1,4 @@
-(jbuild_version 1)
-
 (library
- ((name Mapping)
-  (public_name datamint.mapping)
-  (libraries (lwt str))))
+ (name Mapping)
+ (public_name datamint.mapping)
+ (libraries lwt str))
